fix parsing errors

--- a/administer/accounts-teams/teams.mdx
+++ b/administer/accounts-teams/teams.mdx
@@ -2,7 +2,7 @@
 title: Teams
 description: Chronosphere Observability Platform lets you create and manage teams, assign roles, and set permissions for effective collaboration.
 ---
-import { CollectionNavIcon} from '@/components';
+import { CollectionNavIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 import NoIcon from '/snippets/_partials/no-icon.mdx';
 import TerraformCreate from '/snippets/_partials/terraformcreate.mdx';
@@ -61,7 +61,7 @@ flowchart TD
 To search for a team:
 
 1. Click the search bar to focus on it, or use the keyboard shortcut
-   <kbd>Control+K</kbd> (<kbd>Command+K</kbd> on macOS).
+   `Control+K` (`Command+K` on macOS).
 1. Begin typing any part of the team's name.
 1. Optional: Click the **Teams** filter at the top of the search results to
    constrain your results to only Teams.
