--- a/administer/collections.mdx
+++ b/administer/collections.mdx
@@ -1,7 +1,7 @@
 ---
 title: Collections
 ---
-import { CollectionNavIcon} from '@/components';
+import { CollectionNavIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 import TerraformDel from '/snippets/_partials/terraformdel.mdx';
@@ -38,12 +38,12 @@ the collection that the team can share with on-call engineers or other stakehold
 To search for a collection:
 
 1. Click the search bar to focus on it, or use the keyboard shortcut
-   <kbd>Control+K</kbd> (<kbd>Command+K</kbd> on macOS).
+   `Control+K` (`Command+K` on macOS).
    1. Begin typing any part of the collection's name.
    1. Optional: Click the filters for all other listed resource types at the top of
       the search results to remove them and display only collections.
    1. Click the search result you're interested in, or use the arrow keys to select
-      it and press <kbd>Enter</kbd> (<kbd>Return</kbd> on macOS), to select that
+      it and press `Enter` (`Return` on macOS), to select that
       collection.
 
 To browse collections by their respective teams, in the navigation menu click
