--- a/administer/collections/home.mdx
+++ b/administer/collections/home.mdx
@@ -1,7 +1,7 @@
 ---
 title: Team and collection home pages
 ---
-import { CollectionIcon, CollectionNavIcon} from '@/components';
+import { CollectionIcon, CollectionNavIcon} from '/snippets/Icons.jsx';
 import TerraformDel from '/snippets/_partials/terraformdel.mdx';
 
 {/* -- dri: Garrett Guillotte -- */}
