--- a/administer/collections/migration.mdx
+++ b/administer/collections/migration.mdx
@@ -1,7 +1,7 @@
 ---
 title: Migrate from buckets to collections
 ---
-import { CollectionNavIcon} from '@/components';
+import { CollectionNavIcon} from '/snippets/Icons.jsx';
 import ChronoctlConvert from '/snippets/_partials/chronoctlconvert.mdx';
 
 {/* -- dri: Garrett Guillotte -- */}
