--- a/investigate/alerts/monitors/monitor-actions.mdx
+++ b/investigate/alerts/monitors/monitor-actions.mdx
@@ -204,7 +204,7 @@ Filters can span multiple lines, and you can use `AND` plus `OR` operators to
 include or exclude parameters in your query.
 </Info>
 
-1. Click **Filter**, or press <kbd>Shift+Enter</kbd> (<kbd>Shift+Return</kbd> on
+1. Click **Filter**, or press `Shift+Enter` (`Shift+Return` on
    macOS) to run the query.
 1. In the query result histogram, click any change event icon to view more
    information about each change event.
