--- a/investigate/analyze/logs-usage.mdx
+++ b/investigate/analyze/logs-usage.mdx
@@ -62,7 +62,7 @@ To create control rules:
 
    The **Create control rule page** opens with the filter for the log pattern
    predefined.
-1. Press <kbd>Ctrl+Enter</kbd> (<kbd>Command+Return</kbd> on macOS) to submit the
+1. Press `Ctrl+Enter` (`Command+Return` on macOS) to submit the
    filter. This rule applies to logs that match only this filter at the time the log
    data was ingested.
 1. Review the returned data from the preview filter, and make changes as necessary.
