--- a/investigate/querying/dashboard-query.mdx
+++ b/investigate/querying/dashboard-query.mdx
@@ -2,7 +2,8 @@
 title: Create dashboards from queries
 description: Learn how to create dashboards that include telemetry data queries in Chronosphere Observability Platform.
 ---
-import { AddToDashboardIcon} from '@/components';
+import { AddToDashboardIcon} from '/snippets/Icons.jsx';
+
 {/* -- dri: Adam Locke -- */}
 
 
