--- a/investigate/querying/metrics/builder.mdx
+++ b/investigate/querying/metrics/builder.mdx
@@ -29,8 +29,8 @@ the combined analysis and builder.
 
 As you enter content in the query box, the Query Builder automatically completes
 metric names, label names, label values, function names, operators, and modifiers as
-you type. After you construct a query expression, press <kbd>Enter</kbd>
-(<kbd>Return</kbd> on macOS) to submit it. To clear the query box,
+you type. After you construct a query expression, press `Enter`
+(`Return` on macOS) to submit it. To clear the query box,
 click <Icon icon="xmark" /> **Remove query** at the end of the query box.
 
 The area following the expression field displays details of each part of the query
