--- a/investigate/querying/metrics/explorer-classic.mdx
+++ b/investigate/querying/metrics/explorer-classic.mdx
@@ -1,7 +1,7 @@
 ---
 title: Classic Metrics Explorer
 ---
-import { AddToDashboardIcon} from '@/components';
+import { AddToDashboardIcon} from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 
 {/* -- dri: Adam Locke -- */}
@@ -56,7 +56,7 @@ display changes slightly depending on your source.
 
 The Query field supports autocomplete for metric names and functions. Click an
 autocomplete result to update a query with a suggestion. To execute a query, press
-<kbd>Shift+Enter</kbd> (<kbd>Shift+Return</kbd> on macOS).
+`Shift+Enter` (`Shift+Return` on macOS).
 
 The query field makes suggestions regarding how to improve a query based on these
 factors:
