--- a/investigate/querying/metrics/explorer.mdx
+++ b/investigate/querying/metrics/explorer.mdx
@@ -1,7 +1,7 @@
 ---
 title: Metrics Explorer
 ---
-import { AddToDashboardIcon} from '@/components';
+import { AddToDashboardIcon} from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 
 {/* -- dri: Lynette Miles -- */}
@@ -39,8 +39,8 @@ The query field supports autocompletion for metric names and functions.
 To enter and run a query:
 
 1. In the **query field** begin typing to reveal a list of matching results, and
-   either click a result or use the arrow keys and <kbd>Enter</kbd>
-   (<kbd>Return</kbd> on macOS) to add it to the query.
+   either click a result or use the arrow keys and `Enter`
+   (`Return` on macOS) to add it to the query.
 1. Optional: Click **Builder** to open the
    [Query Builder](/investigate/querying/metrics/query-builder) which you can use to
    construct, optimize, and debug queries before saving and using them, and for
@@ -48,7 +48,7 @@ To enter and run a query:
 1. To add an additional query to execute, click **<Icon icon="plus" /> Add query**.
    Each query adds a series to Metrics Explorer's **Graph** and **Table**.
 1. To execute all of the entered queries, click **<Icon icon="rotate" /> Run**,
-   or press <kbd>Alt+Enter</kbd> (<kbd>Command+Return</kbd> on macOS) on your
+   or press `Alt+Enter` (`Command+Return` on macOS) on your
    keyboard.
 
 To delete a query, click its **<Icon icon="trash" /> Delete query**
