--- a/investigate/querying/query-logs.mdx
+++ b/investigate/querying/query-logs.mdx
@@ -2,6 +2,7 @@
 title: Search and filter log data
 description: Learn how to search and filter logs in Chronosphere Observability Platform.
 ---
+
 {/* -- dri: Adam Locke -- */}
 
 
@@ -65,9 +66,9 @@ To use basic querying:
      ```
 
      <Info>
-If you're unsure what syntax to use, click in the query box and press
-     <kbd>Control+Space</kbd> to display values for a key or available operators.
-</Info>
+      If you're unsure what syntax to use, click in the query box and press
+         `Control+Space` to display values for a key or available operators.
+      </Info>
 
    - **Attributes**: After expanding an individual log, click any key or value to
      display a menu with the following options:
@@ -85,7 +86,7 @@ If you're unsure what syntax to use, click in the query box and press
      - **Copy field name**: Copy the selected key or value.
 
 1. To submit your query, either click **<Icon path={ mdiRefresh } />Run** or press
-   <kbd>Control+Enter</kbd> (<kbd>Command+Return</kbd> on macOS).
+   `Control+Enter` (`Command+Return` on macOS).
 
 1. Expand your query by either adding additional key/value pairs or entering a
    full-text string such as `"failed query token"` to find logs that contain the
@@ -96,9 +97,9 @@ If you're unsure what syntax to use, click in the query box and press
    ```
 
    <Info>
-The operators `AND` plus `OR` are case insensitive, so you can use `AND`,
-   `and`, `OR`, and `or` interchangeably.
-</Info>
+   The operators `AND` plus `OR` are case insensitive, so you can use `AND`,
+      `and`, `OR`, and `or` interchangeably.
+   </Info>
 
 1. As you refine your filter, click and select a portion of the time chart to zoom in
    to view a smaller time window.
@@ -130,7 +131,7 @@ To use advanced filtering:
    The results include 8,700 logs.
 
 1. To submit your query, click **<Icon path={ mdiRefresh } />Run** or press
-   <kbd>Control+Enter</kbd> (<kbd>Command+Return</kbd> on macOS).
+   `Control+Enter` (`Command+Return` on macOS).
 
    You notice that several logs in the results contain `"Failed to query user by token"`
    in the **Summary** column.
