--- a/investigate/querying/query-logs/query-syntax.mdx
+++ b/investigate/querying/query-logs/query-syntax.mdx
@@ -26,9 +26,9 @@ full-text searches are more optimized and return results faster.
 The query syntax for Logs Explorer supports the following features:
 
 - **Autocomplete**: Start typing a key to get autocomplete values. Press
-  <kbd>Control+Space</kbd> to display suggestions.
-- **Run shortcut**: Run a query by pressing <kbd>Control+Enter</kbd>
-  (<kbd>Command+Return</kbd> on macOS).
+  `Control+Space` to display suggestions.
+- **Run shortcut**: Run a query by pressing `Control+Enter`
+  (`Command+Return` on macOS).
 - **Nested queries**: Use parentheses `()` to establish the order of operations for
   complex queries.
 - **Field search**: Query on specific fields by entering a key/value pair such as
