--- a/navigate.mdx
+++ b/navigate.mdx
@@ -2,7 +2,8 @@
 title: Navigate the Observability Platform interface
 description: Learn how to navigate the Chronosphere Observability Platform to find the functions you need to gain insight into your platforms.
 ---
-import { CollectionNavIcon, ServiceNavIcon } from '@/components';
+import { CollectionNavIcon, ServiceNavIcon } from '/snippets/Icons.jsx';
+
 {/* -- dri: Lynette Miles -- */}
 
 
@@ -29,8 +30,8 @@ resources, and also customizable links and descriptions. For details, see
 
 Observability Platform provides a global search bar on every page that supports
 searching for teams, collections, dashboards, monitors, services, and SLOs by name.
-To search, click the search bar or use the keyboard shortcut <kbd>Control+K</kbd>
-(<kbd>Command+K</kbd> on macOS) to focus on the bar, and then begin typing. Search
+To search, click the search bar or use the keyboard shortcut `Control+K`
+(`Command+K` on macOS) to focus on the bar, and then begin typing. Search
 results will appear as you type.
 
 By default, search results include all supported resource types. To toggle a resource
@@ -108,7 +109,7 @@ You can click the team, service, or collection name to go to its overview page.
 ## Keyboard shortcuts
 
 Many pages in Observability Platform include keyboard shortcuts. Press
-<kbd>Control+/</kbd> (<kbd>Command+/</kbd> on macOS) to display the shortcuts for a
+`Control+/` (`Command+/` on macOS) to display the shortcuts for a
 page. Not all pages include shortcuts.
 
 ## Mobile-friendly pages
