--- a/navigate/notebooks.mdx
+++ b/navigate/notebooks.mdx
@@ -23,7 +23,7 @@ Your notebook is visible anywhere in Observability Platform.
 
 To open your notebook, click the **Notebook** <img src="/doc-assets/notebook.png"
 alt="Notebook icon" /> icon in the right sidebar, or use the keyboard shortcut
-<kbd>Command+I</kbd> (on macOS).
+`Command+I` (on macOS).
 
 ## Add items to your notebook
 
@@ -36,7 +36,7 @@ To do so:
 
 The selected resource displays at the bottom of your notebook.
 
-To delete an item from your notebook, click the item and then press <kbd>Delete</kbd>.
+To delete an item from your notebook, click the item and then press `Delete`.
 
 Notebooks support text anywhere in your notebook that isn't an added element.
 Notebook text supports a limited set of [markdown functions](https://commonmark.org/help/).
