--- a/observe.mdx
+++ b/observe.mdx
@@ -2,7 +2,7 @@
 title: Observe your telemetry data
 description: Chronosphere Observability Platform provides scalable, high-performance observability with metrics, tracing, and logging for complex system monitoring.
 ---
-import { ServiceNavIcon } from '@/components';
+import { ServiceNavIcon } from '/snippets/Icons.jsx';
 
 {/* -- dri: Lynette Miles -- */}
 
