--- a/observe/dashboards.mdx
+++ b/observe/dashboards.mdx
@@ -2,7 +2,7 @@
 title: Visualize data using dashboards
 description: Use dashboards to create and organize data visualizations in Chronosphere Observability Platform.
 ---
-import { CollectionIcon, ServiceIcon} from '@/components';
+import { CollectionIcon, ServiceIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 import VersionHistory from '/snippets/_partials/version-history.mdx';
@@ -43,12 +43,12 @@ Select from the following methods to view your available dashboards.
 To search for a dashboard from anywhere in Observability Platform:
 
 1. Click the global search bar to focus on it, or use the keyboard shortcut
-   <kbd>Control+K</kbd> (<kbd>Command+K</kbd> on macOS).
+   `Control+K` (`Command+K` on macOS).
 1. Click the **<Icon icon="dashboard" alt="Dashboard icon"/> Dashboards**
    filter.
 1. Begin typing any part of the dashboard's name.
 1. Click a dashboard listed in the search results to view it, or use the arrow keys
-   to select the result and press <kbd>Enter</kbd> (<kbd>Return</kbd> on macOS).
+   to select the result and press `Enter` (`Return` on macOS).
 
 To view all dashboards, in the navigation menu select
 **<Icon icon="dashboard" alt="Dashboards"/> Dashboards**. This displays
@@ -480,7 +480,7 @@ The dashboard expands to display in the full screen. Edit functions aren't avail
 when in kiosk mode. You can however refresh the dashboard, or move forward and
 backwards in the defined time period.
 
-To exit kiosk mode, click <kbd>Esc</kbd>.
+To exit kiosk mode, click `Esc`.
 
 ## Export a dashboard
 
