--- a/observe/dashboards/panels/bar-chart.mdx
+++ b/observe/dashboards/panels/bar-chart.mdx
@@ -6,7 +6,7 @@ import ChronoctlDashboard from '/snippets/_partials/chronoctl-dashboard.mdx';
 import ClassicPanel from '/snippets/_partials/classic-panels.mdx';
 import PanelQueries from '/snippets/_partials/panel-queries.mdx';
 import DashboardSeriesNaming from '/snippets/_partials/dashboard-series-naming.mdx';
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 import DashboardUnits from '/snippets/_partials/dashboard-units.mdx';
 
 {/* -- dri: Lynette Miles -- */}
