--- a/observe/dashboards/panels/gauge-chart.mdx
+++ b/observe/dashboards/panels/gauge-chart.mdx
@@ -4,7 +4,7 @@ description: Create and customize gauge chart data visualization panels for Chro
 ---
 import ChronoctlDashboard from '/snippets/_partials/chronoctl-dashboard.mdx';
 import ClassicPanel from '/snippets/_partials/classic-panels.mdx';
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 import DashboardSeriesNaming from '/snippets/_partials/dashboard-series-naming.mdx';
 import DashboardUnits from '/snippets/_partials/dashboard-units.mdx';
 
@@ -113,11 +113,11 @@ To create a new threshold value:
    display.
 
    <Warning>
-If you choose **Absolute** as the **Mode** and select any unit other than
-   **Percent**, you must enter a maximum value in the **Max** field for the gauge
-   chart to correctly display data. Otherwise, the chart has no upper limit and will
-   display data incorrectly.
-</Warning>
+   If you choose **Absolute** as the **Mode** and select any unit other than
+      **Percent**, you must enter a maximum value in the **Max** field for the gauge
+      chart to correctly display data. Otherwise, the chart has no upper limit and will
+      display data incorrectly.
+   </Warning>
 
 1. Optional: Click the color indicator, depicted as a colored circle, to open a
    color selector and choose a color for the threshold line.
