--- a/observe/dashboards/panels/heat-map.mdx
+++ b/observe/dashboards/panels/heat-map.mdx
@@ -3,7 +3,7 @@ title: Visualize data density and histograms with heat maps
 description: Create and customize heat map data visualization panels for Chronosphere Observability Platform dashboards.
 ---
 import ClassicPanel from '/snippets/_partials/classic-panels.mdx';
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 
 {/* -- dri: Lynette Miles -- */}
 
