--- a/observe/enable-events/dashboards.mdx
+++ b/observe/enable-events/dashboards.mdx
@@ -45,9 +45,9 @@ To enable change events on standard dashboard panels:
    ```
 
    <Info>
-If you're unsure what syntax is available, press <kbd>Control+Space</kbd> to
-   display available syntax options.
-</Info>
+   If you're unsure what syntax is available, press `Control+Space` to
+      display available syntax options.
+   </Info>
 
 1. In the  **Add event** dialog, click **Add** to add your filter.
 
