--- a/observe/personal-homepage.mdx
+++ b/observe/personal-homepage.mdx
@@ -2,7 +2,8 @@
 title: Personal home page
 shortDesc: Learn how to acess important resources from your personal home page in Chronosphere Observability Platform.
 ---
-import { CollectionNavIcon} from '@/components';
+import { CollectionNavIcon} from '/snippets/Icons.jsx';
+
 {/* -- dri: Lynette Miles -- */}
 
 
