--- a/observe/services.mdx
+++ b/observe/services.mdx
@@ -2,7 +2,7 @@
 title: Services
 description: Learn about services in Chronosphere Observability Platform.
 ---
-import { ServiceNavIcon } from '@/components';
+import { ServiceNavIcon } from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 
 {/* -- dri: Lynette Miles -- */}
