--- a/observe/services/service-exploration.mdx
+++ b/observe/services/service-exploration.mdx
@@ -2,7 +2,7 @@
 title: Service exploration
 description: Learn about how to use services and traces to find issues.
 ---
-import { ServiceNavIcon } from '@/components';
+import { ServiceNavIcon } from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 
 {/* -- dri: Adam Locke -- */}
