--- a/observe/services/service-pages.mdx
+++ b/observe/services/service-pages.mdx
@@ -2,7 +2,7 @@
 title: Service pages
 description: Learn about the different aspects of service pages and how to view data related to your services.
 ---
-import { ServiceNavIcon} from '@/components';
+import { ServiceNavIcon} from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 
