--- a/observe/slo.mdx
+++ b/observe/slo.mdx
@@ -2,7 +2,7 @@
 title: Service level objectives
 description: Learn about service level objectives (SLOs) in Chronosphere Observability Platform.
 ---
-import { ServiceNavIcon} from '@/components';
+import { ServiceNavIcon} from '/snippets/Icons.jsx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 import VersionHistory from '/snippets/_partials/version-history.mdx';
