--- a/observe/slo/manage.mdx
+++ b/observe/slo/manage.mdx
@@ -2,7 +2,7 @@
 title: Manage service level objectives
 description: Learn about creating, editing, and deleting service level objectives (SLOs) in Chronosphere Observability Platform.
 ---
-import { ServiceNavIcon} from '@/components';
+import { ServiceNavIcon} from '/snippets/Icons.jsx';
 import ChronoctlPrereq from '/snippets/_partials/chronoctlprereq.mdx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 import TerraformDel from '/snippets/_partials/terraformdel.mdx';
