--- a/overview.mdx
+++ b/overview.mdx
@@ -2,7 +2,8 @@
 title: Chronosphere Observability Platform
 description: Learn about the Chronosphere Observability Platform and its capabilities.
 ---
-import { PlatformOverviewImage } from '@/components';
+
+import { PlatformOverviewImage } from '/snippets/PlatformOverviewImage.jsx';
 
 {/* -- dri: Adam Locke -- */}
 
