--- a/overview/get-started.mdx
+++ b/overview/get-started.mdx
@@ -2,7 +2,8 @@
 title: Get started with Observability Platform
 description: Learn about some common paths to complete tasks in Chronosphere Observability Platform
 ---
-import { ServiceNavIcon } from '@/components';
+import { ServiceNavIcon } from '/snippets/Icons.jsx';
+
 To get started with Observability Platform:
 
 - Open your browser, [authenticate](/overview/authenticating), and sign in.
