--- a/pipelines.mdx
+++ b/pipelines.mdx
@@ -2,7 +2,8 @@
 title: Chronosphere Telemetry Pipeline
 description: Learn about Chronosphere Telemetry Pipeline.
 ---
-import { PipelineOverviewImage} from '@/components';
+import { PipelineOverviewImage } from '/snippets/PipelineOverviewImage.jsx';
+
 {/* -- dri: Alexa Kreizinger --*/}
 
 
