--- a/tooling/chronoctl.mdx
+++ b/tooling/chronoctl.mdx
@@ -470,5 +470,5 @@ details and instructions for Fish and PowerShell, see the output of
 </Tab>
 </Tabs>
 
-You can now press <kbd>Tab</kbd> on the command line to automatically complete
+You can now press `Tab` on the command line to automatically complete
 Chronoctl commands.
