--- a/investigate/alerts/monitors.mdx
+++ b/investigate/alerts/monitors.mdx
@@ -2,7 +2,7 @@
 title: Use monitors to generate alerts and notifications
 description: View and create monitors for alerting.
 ---
-import { CollectionIcon, ServiceIcon} from '@/components';
+import { CollectionIcon, ServiceIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 import TerraformDel from '/snippets/_partials/terraformdel.mdx';
@@ -73,7 +73,7 @@ to filter the query results to alerts only from that signal.
 To search for a specific monitor:
 
 1. Click the search bar to focus on it, or use the keyboard shortcut
-   <kbd>Control+K</kbd> (<kbd>Command+K</kbd> on macOS).
+   `Control+K` (`Command+K` on macOS).
 1. Begin typing any part of the monitor's name.
 1. Optional: Click the filters for all other listed resource types at the top of the
    search results to remove them and display only monitor.
@@ -134,7 +134,7 @@ You can filter the list of the resulting time series with the **Search Series**
 search box.
 
 Click an item in the list to isolate the related line on the graph. To clear the selection,
-click the item again. You can <kbd>Control+</kbd>click (<kbd>Command+</kbd>click
+click the item again. You can `Control+`click (`Command+`click
 on macOS) to choose multiple items.
 
 ### Annotations
@@ -279,12 +279,12 @@ To add a new monitor:
      | make-series avg(latencyInSeconds) step 15m by severity, service
      ```
 
-     <Info>
-If the log query includes a field that contains a period in its name and you
-     want to use signals to group notifications, use an
-     [alias for that field name](/investigate/querying/query-logs/query-syntax#alias-field-names).
-     Otherwise, periods are converted to underscores in the generated visualization.
-</Info>
+      <Info>
+      If the log query includes a field that contains a period in its name and you
+          want to use signals to group notifications, use an
+          [alias for that field name](/investigate/querying/query-logs/query-syntax#alias-field-names).
+          Otherwise, periods are converted to underscores in the generated visualization.
+      </Info>
 1. Use these options to validate and update your query:
 
    - Click **Check Query** to validate your query and preview query results. In the
@@ -314,9 +314,9 @@ If the log query includes a field that contains a period in its name and you
    - Toggle **Simulate alerts** to backtest your condition against existing data. You
      must define at least one condition for alert simulations to work.
 
-     <Info>
-Alert simulations use existing data, and can't predict future alerts.
-</Info>
+      <Info>
+      Alert simulations use existing data, and can't predict future alerts.
+      </Info>
 
      If your selected query returns too much data, the graph displays an error.
      Chronosphere recommends selecting shorter time periods for testing, when possible.
@@ -328,13 +328,13 @@ Alert simulations use existing data, and can't predict future alerts.
    [Signals](/investigate/alerts/notifications/signals) use a unique set of labels to
    create groups of notifications when a monitor alert triggers or resolves.
 
-   <Info>
-If you select **per signal (multiple alerts)** to generate multiple alerts, enter
-   a label key that differs in name and casing from the label you enter in the
-   **Key** field in the **Labels** section. For example, if you enter `environment`
-   in the **Key** field, you might use `Environments` as the **Label Key** to match
-   on. [Pinned scopes](/navigate/pinned-scopes) can be used as a **Label Key**.
-</Info>
+    <Info>
+    If you select **per signal (multiple alerts)** to generate multiple alerts, enter
+      a label key that differs in name and casing from the label you enter in the
+      **Key** field in the **Labels** section. For example, if you enter `environment`
+      in the **Key** field, you might use `Environments` as the **Label Key** to match
+      on. [Pinned scopes](/navigate/pinned-scopes) can be used as a **Label Key**.
+    </Info>
 
 1. Define a condition and sustain period (duration of time) in the **Conditions**
    section, and assign the resulting alert a severity (warning or critical). In
@@ -343,10 +343,10 @@ If you select **per signal (multiple alerts)** to generate multiple alerts, ente
    (days). The dialog also displays the notifiers associated with the monitor for
    reference.
 
-   <Info>
-To alert on missing or no data, select **not exists** in the **Alert when value**
-   dropdown.
-</Info>
+    <Info>
+    To alert on missing or no data, select **not exists** in the **Alert when value**
+      dropdown.
+    </Info>
 
 1. In the **Resolve** field, enter a time period for the resolve window as a
    value followed by an abbreviated unit such as `30s`. Valid units are `s`
