--- a/observe/dashboards/panels/distribution-chart.mdx
+++ b/observe/dashboards/panels/distribution-chart.mdx
@@ -3,7 +3,7 @@ title: Visualize histogram distribution
 sidebarTitle: Visualize histograms with distribution charts
 description: Create and customize histogram distribution visualization panels for Chronosphere Observability Platform dashboards.
 ---
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 import DashboardUnits from '/snippets/_partials/dashboard-units.mdx';
 
 {/* -- dri: Lynette Miles -- */}
