--- a/observe/dashboards/panels/pie-chart.mdx
+++ b/observe/dashboards/panels/pie-chart.mdx
@@ -4,7 +4,7 @@ description: Create and customize pie chart data visualization panels for Chrono
 ---
 import ChronoctlDashboard from '/snippets/_partials/chronoctl-dashboard.mdx';
 import ClassicPanel from '/snippets/_partials/classic-panels.mdx';
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 import DashboardSeriesNaming from '/snippets/_partials/dashboard-series-naming.mdx';
 import PanelQueries from '/snippets/_partials/panel-queries.mdx';
 
