--- a/observe/dashboards/panels/time-series-chart.mdx
+++ b/observe/dashboards/panels/time-series-chart.mdx
@@ -3,12 +3,12 @@ title: Visualize time series with charts
 sidebarTitle: Visualize time series data
 description: Create and customize time series data visualization panels for Chronosphere Observability Platform dashboards.
 ---
-import { Tab} from '@/components';
+
 import ChronoctlDashboard from '/snippets/_partials/chronoctl-dashboard.mdx';
 import ClassicPanel from '/snippets/_partials/classic-panels.mdx';
 import PanelQueries from '/snippets/_partials/panel-queries.mdx';
 import DashboardSeriesNaming from '/snippets/_partials/dashboard-series-naming.mdx';
-import DashboardDownsampleTruncate from'@/_partials/dashboard-downsample-truncate.mdx';
+import DashboardDownsampleTruncate from'/snippets/_partials/dashboard-downsample-truncate.mdx';
 import DashboardUnits from '/snippets/_partials/dashboard-units.mdx';
 
 {/* -- dri: Lynette Miles -- */}
