--- a/tooling/infrastructure/terraform/install.mdx
+++ b/tooling/infrastructure/terraform/install.mdx
@@ -1,8 +1,8 @@
 ---
 title: Install the Chronosphere Terraform provider
 ---
-import versions from '../../../versions.json';
-import { DynamicCode, Link} from '@/components';
+import {versions} from '/snippets/versions.jsx';
+import { DynamicCode } from '/snippets/DynamicCode.jsx';
 import ServiceAccounts from '/snippets/_partials/service-accounts.mdx';
 
 export const storageLocation = `https://storage.googleapis.com/chronosphere-terraform`;
